--- a/src/styles.css
+++ b/src/styles.css
@@ -9926,3 +9926,8 @@ input.inp_cal:focus {
   color: #696f79;
   text-align: left;
 }
+
+.select {
+  background-color: rgb(232, 240, 254);
+  height: 34px;
+}
