--- a/src/app/user-management/user-authentication-add/user-authentication-add.component.html
+++ b/src/app/user-management/user-authentication-add/user-authentication-add.component.html
@@ -78,18 +78,21 @@
                       <tr>
                           <th class = "defualt-font border-right" scope="row">Category</th>
                           <th class = "defualt-font" scope="row">
-                            Add
+                            READ
                             <input class="in" checked="" type="checkbox">
                           </th>
                           <th class = "defualt-font" scope="row">
-                            Edit
+                            CREATE
                             <input class="in" checked="" type="checkbox">
                           </th>
                           <th class = "defualt-font" scope="row">
-                            Delete
+                            UPDATE
                             <input class="in" checked="" type="checkbox">
                           </th>
-                          <th class = "defualt-font" scope="row"></th>
+                          <th class = "defualt-font" scope="row">
+                            DELETE
+                            <input class="in" checked="" type="checkbox">
+                          </th>
                           <th class = "defualt-font" scope="row"></th>
                           <th class = "defualt-font" scope="row"></th>
                       </tr>
