--- a/src/app/component/input/input.component.html
+++ b/src/app/component/input/input.component.html
@@ -5,7 +5,9 @@
   <div class="card">
       <div class="card-body">
           <h3 class="card-title">Sales Overview</h3>
-
+          <div class="wrap">
+            <kendo-avatar [border]="true" [shape]="'circle'" [initials]="'JD'" [imageSrc]="imageSrc"></kendo-avatar>
+          </div>
           <div class="form-row col-md-12">
             <input type="text" class="form-control floating" (input)="searchName($event)">
           </div>
@@ -191,6 +193,8 @@
           <span class="_7q1t"></span>
         </div>
       </div>
+
+
 
 
   </div>
