--- a/src/styles.css
+++ b/src/styles.css
@@ -9372,12 +9372,11 @@ div.dataTables_paginate {
 
 .k-grid-content::-webkit-scrollbar-track {
   background: #f3f6fa !important;
-  border-radius: 10px;
 }
 
 .k-grid-content::-webkit-scrollbar-thumb {
   background: #444 !important;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
 /* .k-grid-content::-webkit-scrollbar-thumb:hover {
@@ -9930,4 +9929,40 @@ input.inp_cal:focus {
 .select {
   background-color: rgb(232, 240, 254);
   height: 34px;
+}
+
+
+.dropdown-item {
+	cursor: pointer;
+
+  }
+
+  .dropdown-menu-right {
+	padding: 0;
+  }
+
+  .dropdown-item:focus, .dropdown-item:hover {
+	background-color: #3f496d !important;
+	color: white;
+  }
+
+  .k-avatar-image {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-repeat-x: no-repeat;
+    background-repeat-y: no-repeat;
+    border-radius: 50%;
+}
+
+.k-avatar-solid.k-avatar-primary {
+  border-color: #ff6358;
+  color: #ffffff;
+  background-color: #ff6358;
+}
+
+.avatar div {
+  width: 65px;
 }
